move integration tests from core